Write user signup form

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,5 +3,13 @@
   <%= f.text_field :username %>
   <%= f.label :password %>
   <%= f.password_field :password %>
-  <%= f.submit 'Login' %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %>
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name %>
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  <%= f.label :phone %>
+  <%= f.text_field :phone %>
+  <%= f.submit 'Signup' %>
 <% end %>
