--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,12 @@
 <div>
 	<h1>Edit Your Profile</h1>
+	<%= form_for @user do |f| %>
+	  <p><%= f.text_field :username, placeholder: "Username" %></p>
+	  <p><%= f.password_field :password, placeholder: "Password" %></p>
+	  <p><%= f.text_field :first_name, placeholder: "First Name" %></p>
+	  <p><%= f.text_field :last_name, placeholder: "Last Name" %></p>
+	  <p><%= f.text_field :email, placeholder: "Email" %></p>
+	  <p><%= f.text_field :phone, placeholder: "Phone" %></p>
+	  <p><%= f.submit 'Save' %>
+	<% end %>
 </div>
