--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,12 @@
-<div>
-  <%= link_to "Triple B", :root %>
-  <% if signed_in? %>
-    <%= link_to current_user.username, user_path(id: current_user.id) %>
-    <%= link_to "Logout", session_path(id: current_user.id), method: :delete %>
-  <% else %>
-    <%= link_to "Login", login_path %>
-    <%= link_to "Sign up", new_user_path %>
-  <% end %>
+<div class="contain-to-grid sticky">
+  <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
+    <%= link_to "Triple B", :root %>
+    <% if signed_in? %>
+      <%= link_to current_user.username, user_path(id: current_user.id) %>
+      <%= link_to "Logout", session_path(id: current_user.id), method: :delete %>
+    <% else %>
+      <%= link_to "Login", login_path %>
+      <%= link_to "Sign up", new_user_path %>
+    <% end %>
+  </nav>
 </div>
