finish user signup view

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,6 @@
 	  <p><%= f.text_field :last_name, placeholder: "Last Name" %></p>
 	  <p><%= f.text_field :email, placeholder: "Email" %></p>
 	  <p><%= f.text_field :phone, placeholder: "Phone" %></p>
-	  <p><%= f.submit 'Save' %>
+	  <p><%= f.submit 'Save' %></p>
 	<% end %>
 </div>
