--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,5 +5,5 @@
   <p><%= f.text_field :last_name, placeholder: "Last Name" %></p>
   <p><%= f.text_field :email, placeholder: "Email" %></p>
   <p><%= f.text_field :phone, placeholder: "Phone" %></p>
-  <p><%= f.submit 'Signup' %>
+  <p><%= f.submit 'Signup' %></p>
 <% end %>
