--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,12 +1,14 @@
 <div class="contain-to-grid sticky">
   <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
-    <%= link_to "Triple B", :root %>
-    <% if signed_in? %>
-      <%= link_to current_user.username, user_path(id: current_user.id) %>
-      <%= link_to "Logout", session_path(id: current_user.id), method: :delete %>
-    <% else %>
-      <%= link_to "Login", login_path %>
-      <%= link_to "Sign up", new_user_path %>
-    <% end %>
+    <ul class="button-group even-3">
+      <li><%= link_to "Triple B", :root, class: "button" %></li>
+      <% if signed_in? %>
+        <li><%= link_to current_user.username, user_path(id: current_user.id), class: "button" %></li>
+        <li><%= link_to "Logout", session_path(id: current_user.id), method: :delete, class: "button" %></li>
+      <% else %>
+        <li><%= link_to "Login", login_path, class: "button" %></li>
+        <li><%= link_to "Sign up", new_user_path, class: "button" %></li>
+      <% end %>
+    </ul>
   </nav>
 </div>
