switch back to Alert.all for index

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,7 +1,7 @@
 <ul>
   <% @alerts.each do |a| %>
     <li>
-      <%= Issue.find(a.issue_id).part %>
+      <%= a.creator.username %>
     </li>
   <% end %>
 </ul>
