Add more content in show alert view

--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -1,2 +1,3 @@
 <h1>Alert status: <%= @alert.status %></h1>
 <h3><%= @alert.creator.first_name %> needs help</h3>
+<p><%= @alert_issue.description %></p>
