--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -97,7 +97,7 @@ $font-family-serif: 'Merriweather', Cambria, "Times New Roman", Times, serif;
 // $font-weight-normal: normal;
 // $font-weight-bold: bold;
 
-$white       : #E1F5C4;
+$white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
