--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -97,7 +97,7 @@ $font-family-serif: 'Merriweather', Cambria, "Times New Roman", Times, serif;
 // $font-weight-normal: normal;
 // $font-weight-bold: bold;
 
-$white       : #FFFFFF;
+// $white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
@@ -118,15 +118,15 @@ $white       : #FFFFFF;
 // $black       : #000000;
 
 // We use these as default colors throughout
-$primary-color: #FF4E50;
-$secondary-color: $white;
+// $primary-color: #008CBA;
+// $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
-$body-bg: $white;
+// $body-bg: $white;
 // $body-font-color: $jet;
 // $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
