--- a/app/views/alerts/show_complete.html.erb
+++ b/app/views/alerts/show_complete.html.erb
@@ -4,5 +4,5 @@
 <% else %>
   <h3>Created by <%= @alert.creator.username%> </h3>
 <%end%>
-<h4>This alert was posted <%=@alert.time_diff%> from <%=@alert.latitude%>, <%=alert.longitude%></h4>
+<h4>This alert was posted <%=@alert.time_diff%> from <%=@alert.latitude%>, <%=@alert.longitude%></h4>
 <p><%=@alert.description%></p>
