--- a/app/views/alerts/show_incomplete.html.erb
+++ b/app/views/alerts/show_incomplete.html.erb
@@ -4,7 +4,9 @@
 <div>Created <%= @alert.time_diff %> ago</div>
 <div>Latitude: <%= @alert.latitude %></div>
 <div>Longitude: <%= @alert.longitude %></div>
-<div>Tags: <%= @alert.tags %></div>
+<% @alert.tags.each do |tag| %>
+	<div><%= tag.name %></div>
+<% end %>
 
 
 <% if current_user == @alert.creator %>
