Add mechanic has offered to help in alert show in progress view

--- a/app/views/alerts/show_in_progress.html.erb
+++ b/app/views/alerts/show_in_progress.html.erb
@@ -1,5 +1,4 @@
 <h1>Alert status: <%= @alert.status %></h1>
-<h3><%= @alert.creator.first_name %> needs help</h3>
 <p><%= @alert.description %></p>
 <p>Posted at: <%= @alert.created_at %></p>
 <p>Latitude: <%= @alert.latitude %></p>
@@ -11,6 +10,7 @@
 </div>
 <div>
   <% if @alert.creator == current_user %>
+  <p><%= @alert.mechanic.first_name%> has offered to help!<p>
     <%= form_for @alert do |f| %>
       <%= f.hidden_field :status, value: "complete" %>
       <%= f.submit "Complete this alert" %>
