--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -4,8 +4,8 @@
   <%= f.text_field :description %>
   <%= f.label :tags %>
   <%= f.text_field :all_tags %>
-  <div id="location">
-  </div>
+  <input type='hidden' name="alert[latitude]" id="latitude" value=""/>
+  <input type='hidden' name="alert[longitude]" id="longitude" value=""/>
   <%= f.submit %>
 <% end %>
 </div>
