Add menu for mobile view of nav bar

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,6 +4,10 @@
       <li class="name">
         <h1><%= link_to "Triple B", :root %></h1>
       </li>
+      <li class="has-form">
+          <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+      </li>
+
     </ul>
 
     <section class="top-bar-section">
