--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,20 +1,14 @@
-<%= link_to "Create an alert", new_alert_path %>
+<h2 class='small-6 small-centered columns'><%= link_to "Create an alert", new_alert_path %></h2>
 
-<div class="river">
+<ul class='row no-bullet'>
   <% @alerts.each do |alert| %>
-    <div class="alert-container">
-      <div class="alert-creator">
-        <%= alert.creator.username %>
-      </div>
-      <div class="alert-description">
-        <%= link_to alert.description, alert_path(alert) %>
-      </div>
-      <div class="alert-status">
-        <%= alert.status %>
-      </div>
-      <div class="alert-coords">
-        <%= alert.latitude %>, <%= alert.longitude %>
-      </div>
-    </div>
+  <div class='small-11 large-6 small-centered columns'>
+    <li><%= link_to alert.description, alert_path(alert) %></li>
+    <ul>
+      <li><%= alert.creator.username %></li>
+      <li><%= alert.status %></li>
+      <li><%= alert.latitude %>, <%= alert.longitude %></li>
+    </ul>
+  </div>
   <% end %>
-</div>
+</ul>
