Show user position after offering help

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,5 +18,7 @@
 			<li><%= link_to alert.time_diff, alert_path(alert) %></li>
 		<% end %>
 	</ul>
+	<p><%=@user.latitude%>
+	<%=@user.longitude%></p>
 
 </div>
