Move create alread to nav and add header

--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,5 +1,6 @@
-<h2 class='small-6 small-centered columns'><%= link_to "Create an alert", new_alert_path %></h2>
-
+<div class='row'>
+  <h1 class='small-11 small-centered columns'>Alerts located near you</h1>
+</div>
 <ul class='row no-bullet'>
   <% @alerts.each do |alert| %>
   <div class='small-11 large-6 small-centered columns'>
