--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,6 +13,7 @@
     <section class="top-bar-section">
       <ul class="right">
       <% if signed_in? %>
+        <li class="active"><%= link_to "Create an alert", new_alert_path %></li>
         <li class="active"><%= link_to current_user.username, user_path(id: current_user.id) %></li>
         <li class="active"><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
       <% else %>
@@ -20,6 +21,7 @@
         <li class="active"><%= link_to "Sign up", new_user_path %></li>
       <% end %>
     </ul>
+
     </section>
   </nav>
 </div>
