--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,7 @@
         <li class="active"><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
       <% else %>
         <li class="active"><%= link_to "Login", login_path %></li>
-        <li class="active"><%= link_to "Sign up", new_user_path %></li>
+        <li class="active"><%= link_to "Sign up", signup_path %></li>
       <% end %>
     </ul>
 
