Change new_user_path to sign_up_path in welcome index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,6 +2,6 @@
   <div class="large-3 columns">
     <h1>Triple B</h1>
     <p>Triple A for Bikes</p>
-    <p>Please <%= link_to "Login", login_path %> or <%= link_to "Sign Up", new_user_path %></p>
+    <p>Please <%= link_to "Login", login_path %> or <%= link_to "Sign Up", signup_path %></p>
   </div>
 </div>
