hide user#edit link for unauthorized

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <div>
-	<%= link_to 'Edit', edit_user_path(@user) %>
+	<% if authorized?(@user)%>
+		<%= link_to 'Edit', edit_user_path(@user) %>
+	<% end %>
 
 	<h1>Welcome <%= @user.first_name %></h1>
 
