--- a/app/views/user_mailer/welcome_email.html.erb.html
+++ b/app/views/user_mailer/welcome_email.html.erb.html
@@ -4,9 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to example.com, <%= @user.first_name %></h1>
+    <h1>Welcome to TripleB.com, <%= @user.first_name %></h1>
     <p>
-      You have successfully signed up to example.com,
+      You have successfully signed up to TripleB.com,
       your username is: <%= @user.email %>.<br>
     </p>
     <p>
