--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,7 +1,7 @@
-Welcome to example.com, <%= @user.first_name %>
+Welcome to TripleB.com, <%= @user.first_name %>
 ===============================================
  
-You have successfully signed up to example.com,
+You have successfully signed up to TripleB.com,
 your username is: <%= @user.email %>.
  
 To login to the site, just follow this link: <%= @url %>.
