--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,19 +5,25 @@
 
 	<h1>Welcome <%= @user.first_name %></h1>
 
-	<h2>Your Created Alerts</h2>
-	<ul>
-		<% @created_alerts.each do |alert| %>
-			<li><%= link_to alert.time_diff, alert_path(alert) %></li>
-		<% end %>
-	</ul>
+	<div class='row' style="width: 100%;">
+		<div class='large-6 column text-center'>
+			<h2>Your Created Alerts</h2>
+			<ul>
+				<% @created_alerts.each do |alert| %>
+					<li><%= link_to alert.time_diff, alert_path(alert) %></li>
+				<% end %>
+			</ul>
+		</div>
 
-		<h2>Your Accepted Alerts</h2>
-	<ul>
-		<% @alerts.each do |alert| %>
-			<li><%= link_to alert.time_diff, alert_path(alert) %></li>
-		<% end %>
-	</ul>
+		<div class='large-6 column text-center'>
+			<h2>Your Accepted Alerts</h2>
+			<ul>
+				<% @alerts.each do |alert| %>
+					<li><%= link_to alert.time_diff, alert_path(alert) %></li>
+				<% end %>
+			</ul>
+		</div>
+	</div>
 	<p><%=@user.latitude%>
 	<%=@user.longitude%></p>
 
