add bio and avatar field to edit page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 		<%= link_to 'Edit', edit_user_path(@user) %>
 	<% end %>
 
-	<%= image_tag("http://vectorlogofree.com/wp-content/uploads/2014/02/25231-github-cat-in-a-circle-icon-vector-icon-vector-eps.png") %>
+	<%= image_tag(@user.avatar_url) %>
 	<h1>Welcome <%= @user.full_name %></h1>
 	<div>Member Since: <%= @user.time_diff %></div>
 
