--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,8 @@
 	  <p><%= f.text_field :last_name, placeholder: "Last Name" %></p>
 	  <p><%= f.text_field :email, placeholder: "Email" %></p>
 	  <p><%= f.text_field :phone, placeholder: "Phone" %></p>
+	  <p><%= f.text_field :bio, placeholder: "Bio" %></p>
+	  <p><%= f.text_field :avatar_url, placeholder: "Avatar" %></p>
 	  <p><%= f.submit 'Update' %></p>
 	<% end %>
 </div>
