--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: name %>
     <% end %>
+
+    <% if current_user %>
+      <div id="user_id" style="display: none;"><%= current_user.id %></div>
+    <% end %>
+
     <%= yield %>
 
   </body>
