--- a/app/views/alerts/show_incomplete.html.erb
+++ b/app/views/alerts/show_incomplete.html.erb
@@ -4,6 +4,9 @@
 <div>Created <%= @alert.time_diff %> ago</div>
 <div id="lat" style="display: none;"><%= @alert.latitude %></div>
 <div id="lng" style="display: none;"><%= @alert.longitude %></div>
+<div id='current_lat' style="display: none;"><%= current_user.latitude %></div>
+<div id='current_lng' style="display: none;"><%= current_user.longitude %></div>
+
 <% @alert.tags.each do |tag| %>
 	<div><%= tag.name %></div>
 <% end %>
