--- a/app/views/alerts/show_incomplete.html.erb
+++ b/app/views/alerts/show_incomplete.html.erb
@@ -11,7 +11,7 @@
 	<div><%= tag.name %></div>
 <% end %>
 <% if current_user == @alert.creator %>
-	<%= link_to 'Delete Alert'%>
+	<%= link_to 'Delete Alert', @alert, method: :delete %>
 <% else %>
 	<%= form_for @alert do |f| %>
     <%= f.hidden_field :status, value: "in progress" %>
