--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="large-3 columns">
-    <h1>Triple B</h1>
-    <p>Triple A for Bikes</p>
-    <p>Please <%= link_to "Login", login_path %> or <%= link_to "Sign Up", signup_path %></p>
+    <h2>Tripl_B is a roadside assistance network for bikes.</h2>
+    <p>If you're having bike trouble, or want to offer assistance: <%= link_to "Login", login_path %> or <%= link_to "Sign Up", signup_path %></p>
   </div>
 </div>
