--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<section id="homepage-hero">
 <div class="row">
   <div class="large-3 columns">
     <h1>Triple B</h1>
@@ -5,3 +6,4 @@
     <p>Please <%= link_to "Login", login_path %> or <%= link_to "Sign Up", signup_path %></p>
   </div>
 </div>
+</section>
