--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,12 @@
 <section id="homepage-hero">
-<div class="row">
-  <div class="large-3 columns">
-    <h1>Triple B</h1>
-    <p>Triple A for Bikes</p>
-    <p>Please <%= link_to "Login", login_path %> or <%= link_to "Sign Up", signup_path %></p>
+  <div class="row">
+    <div class="small-10 small-centered columns">
+      <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
+    </div>
   </div>
-</div>
+  <div class="row">
+    <div class="small-10 small-centered columns">
+      <%= link_to "Sign Up", signup_path, class: "button small expand radius hero-button" %>
+    </div>
+  </div>
 </section>
