--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -10,7 +10,7 @@
     background: url(asset-path('Flat-Tire.jpg')) repeat scroll 0 center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 90%;
     padding: 100px 20px 0;
     position: relative;
     text-align: center;
@@ -18,4 +18,33 @@
 
 .hero-button {
   opacity: .7;
+}
+
+.block {
+  text-align: center;
+  white-space: nowrap;
+}
+
+.block:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
+
+.centered {
+  display: inline-block;
+  vertical-align: middle;
+  width: 300px;
+  height: 400px;
+}
+#footer {
+  a {
+    color: white;
+  }
+  position: relative;
+  height: 3em;
+  bottom: 2em;
+  background-color: #333333;
 }
