Add footer to page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,19 @@
-<section id="homepage-hero">
-  <div class="row">
-    <div class="small-10 small-centered columns">
-      <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
+<section id="homepage-hero" class="block">
+  <div class='centered'>
+    <div class="row">
+      <div class="small-10 small-centered columns">
+        <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="small-10 small-centered columns">
-      <%= link_to "Sign Up", signup_path, class: "button small expand radius hero-button" %>
+    <div class="row">
+      <div class="small-10 small-centered columns">
+        <%= link_to "Sign Up", signup_path, class: "button small expand radius hero-button" %>
+      </div>
     </div>
   </div>
 </section>
+<div class='row' id='footer'>
+  <div class='small-2 small-centered columns'>
+    <h5><a href="#">About</a></h5>
+  </div>
+</div>
