Change color scheme

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -41,10 +41,10 @@
 }
 #footer {
   a {
-    color: white;
+    color: #faf9df;
   }
   position: relative;
   height: 3em;
   bottom: 2em;
-  background-color: #333333;
+  background-color: #252419;
 }
