Pull out footer and put in partial

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,8 +12,4 @@
     </div>
   </div>
 </section>
-<div class='row' id='footer'>
-  <div class='small-2 small-centered columns'>
-    <h5><a href="#">About</a></h5>
-  </div>
-</div>
+<%= render partial: "shared/footer" %>
