--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -452,7 +452,7 @@ $paragraph-font-family: $font-family-serif;
 // We use these to control button text styles.
 // $button-font-family: $body-font-family;
 // $button-font-color: $white;
-// $button-font-color-alt: $oil;
+$button-font-color-alt: $white;
 // $button-font-tny: rem-calc(11);
 $button-font-sml: rem-calc(25);
 // $button-font-med: rem-calc(16);
