Add more content for signup page in css file

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -68,3 +68,20 @@
     text-decoration: underline;
   }
 }
+
+#signup-page{
+  .centered{
+    height: 90%;
+  }
+  h3 {
+    text-align: left;
+    color: #faf9df;
+    opacity: .7;
+  }
+  height: 90%;
+  background-color: #00aac8;
+
+}
+#sign-up-form {
+  padding-bottom: -0.5em;
+}
