Add hight fix for logo image

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -54,11 +54,13 @@
 }
 
 #login-page {
+  .logo {
+    margin-bottom: 0.5em;
+  }
   height: 90%;
   background-color: #00aac8;
   h3 {
     padding-bottom: 3em;
-    text-align: left;
   }
   h3, a {
     color: #faf9df;
