Add image tag for logo in signup page

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div class="centered">
     <div class='row'>
       <div class='small-12 columns'>
-        <h3>Sign up for an account</h3>
+        <h3><%= image_tag "bike_logo_white.png", size: '30', class: 'logo' %> Sign up for an account</h3>
       </div>
     </div>
     <%= form_for @user do |f| %>
