--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -14,6 +14,10 @@
     padding: 100px 20px 0;
     position: relative;
     text-align: center;
+    .logo {
+      margin-top: -3em;
+      margin-bottom: 3em;
+    }
 }
 
 .hero-button {
