Add image tag for welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <section id="homepage-hero" class="block">
   <div class='centered'>
+    <%= image_tag "bike_logo_white.png", class: 'logo' %>
     <div class="row">
       <div class="small-10 small-centered columns">
         <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
