--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -2,14 +2,9 @@
   <h1 class='small-11 small-centered columns'>Alerts located near you</h1>
 </div>
 <ul class='row no-bullet'>
-  <% @alerts.each do |alert| %>
+  <% @locations.each do |location| %>
   <div class='small-11 large-6 small-centered columns'>
-    <li><%= link_to alert.description, alert_path(alert) %></li>
-    <ul>
-      <li><%= alert.creator.username %></li>
-      <li><%= alert.status %></li>
-      <li><%= alert.latitude %>, <%= alert.longitude %></li>
-    </ul>
+    <%= location.locatable %>
   </div>
   <% end %>
 </ul>
