Remove index from welcome controller

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,22 @@
-<section id="homepage-hero" class="block">
-  <div class='centered'>
-    <%= image_tag "bike_logo_white.png", class: 'logo' %>
-    <div class="row">
-      <div class="small-10 small-centered columns">
-        <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
+<% if signed_in? %>
+  <section id='homepage-hero-signed-in' class='block'>
+
+  </section>
+<% else %>
+  <section id="homepage-hero" class="block">
+    <div class='centered'>
+      <%= image_tag "bike_logo_white.png", class: 'logo' %>
+      <div class="row">
+        <div class="small-10 small-centered columns">
+          <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-10 small-centered columns">
+          <%= link_to "Sign Up", signup_path, class: "button small expand radius hero-button" %>
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="small-10 small-centered columns">
-        <%= link_to "Sign Up", signup_path, class: "button small expand radius hero-button" %>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
+<% end %>
 <%= render partial: "shared/footer" %>
