Add correctly centered bgimage for signed in css file

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -5,7 +5,15 @@
 .location_map {
   height:500px;
 }
-
+#homepage-hero-signed-in {
+    background: url(asset-path('bwbike.jpg')) repeat scroll 45% center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 90%;
+    padding: 100px 20px 0;
+    position: relative;
+    text-align: center;
+}
 #homepage-hero {
     background: url(asset-path('Flat-Tire.jpg')) repeat scroll 0 center;
     background-size: cover;
