--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -1,3 +1,13 @@
+.profile-layer {
+  position: relative;
+  height: 30%;
+  width: 110%;
+  top: -6.6em;
+  margin-left: -1em;
+  opacity: .7;
+  background-color: #00aac8;
+}
+
 .direction_map {
   height:500px;
 }
@@ -13,6 +23,9 @@
     padding: 100px 20px 0;
     position: relative;
     text-align: center;
+    .hero-button {
+      opacity: .775;
+    }
 }
 #homepage-hero {
     background: url(asset-path('Flat-Tire.jpg')) repeat scroll 0 center;
@@ -30,6 +43,19 @@
 
 .hero-button {
   opacity: .7;
+}
+
+.block-splash {
+  text-align: center;
+  white-space: nowrap;
+}
+
+.block-splash:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -1em; /* Adjusts for spacing */
 }
 
 .block {
