--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -1,10 +1,13 @@
 .profile-layer {
+  h3, h6 {
+    color: #faf9df;
+  }
   position: relative;
-  height: 30%;
+  height: 20%;
   width: 110%;
   top: -6.6em;
   margin-left: -1em;
-  opacity: .7;
+  opacity: .8;
   background-color: #00aac8;
 }
 
