--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -1,7 +1,15 @@
 .profile-layer {
+  img {
+    position: absolute;
+    margin-left: -8.5em;
+    border-radius: 100%;
+    border-style: solid;
+    border-color: #faf9df;
+    border-width: 3px;
+    }
   h3, h6 {
     color: #faf9df;
-  }
+    }
   position: relative;
   height: 20%;
   width: 110%;
@@ -10,6 +18,7 @@
   opacity: .8;
   background-color: #00aac8;
 }
+
 
 .direction_map {
   height:500px;
@@ -28,6 +37,9 @@
     text-align: center;
     .hero-button {
       opacity: .775;
+    }
+    .button-path {
+      padding-bottom: 3em;
     }
 }
 #homepage-hero {
