--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,6 +4,7 @@
       <div class='profile-layer'>
         <div class='row'>
           <div class='small-5 small-centered columns'>
+            <%= image_tag current_user.avatar_url, size: '70'%>
             <h3><%= current_user.full_name %></h3>
           </div>
           <div class='small-5 small-centered columns'>
@@ -12,7 +13,7 @@
         </div>
       </div>
       <div class='row'>
-        <div class='small-centered columns'>
+        <div class='small-centered columns button-path'>
           <%= link_to "I need assistance", new_alert_path, class: 'button small expant radius hero-button alert' %>
         </div>
         <div class='small-centered columns'>
