--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -25,7 +25,13 @@
 }
 
 .location_map {
-  height:500px;
+  position: fixed;
+  height: 15em;
+}
+
+#create-alert-page {
+  height: 100%;
+  background-color: #00aac8;
 }
 #homepage-hero-signed-in {
     background: url(asset-path('bwbike.jpg')) repeat scroll 45% center;
@@ -105,6 +111,7 @@
 #password-div {
   padding-bottom: 3em;
 }
+
 
 #login-page {
   .logo {
