--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,9 +1,20 @@
-<%= form_for @alert, id:"alert_form" do |f| %>
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-  <%= f.label :tags %>
-  <%= f.text_field :all_tags %>
-  <input type='hidden' name="alert[latitude]" id="latitude" value=""/>
-  <input type='hidden' name="alert[longitude]" id="longitude" value=""/>
-  <%= f.submit %>
-<% end %>
+<section class='block' id='create-alert-page'>
+  <div class="location_map"></div>
+  <div class='centered'>
+
+    <%= form_for @alert, id:"alert_form" do |f| %>
+      <div class='row'>
+        <div class='small-12 columns'>
+          <%= f.label :description %>
+          <%= f.text_field :description %>
+          <%= f.label :tags %>
+          <%= f.text_field :all_tags %>
+          <input type='hidden' name="alert[latitude]" id="latitude" value=""/>
+          <input type='hidden' name="alert[longitude]" id="longitude" value=""/>
+          <%= f.submit %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</section>
+<%= render partial: "shared/footer" %>
