Add commented out google fonts

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -87,9 +87,9 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-@import url(https://fonts.googleapis.com/css?family=Lato);
+// @import url(https://fonts.googleapis.com/css?family=Lato);
 $font-family-sans-serif: "Lato", Helvetica, Roboto, Arial, sans-serif;
-@import url(https://fonts.googleapis.com/css?family=Merriweather);
+// @import url(https://fonts.googleapis.com/css?family=Merriweather);
 $font-family-serif: 'Merriweather', Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
