Add wrapper on foot for new alert page

--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -16,5 +16,5 @@
       </div>
     <% end %>
   </div>
+<div class='foot-wrapper'><%= render partial: "shared/footer" %></div>
 </section>
-<%= render partial: "shared/footer" %>
