--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,42 @@
-<div class="row">
-  <div class="large-3 columns">
-    <h1>Triple B</h1>
-    <p>Triple A for Bikes</p>
-    <p>Please <%= link_to "Login", login_path %> or <%= link_to "Sign Up", signup_path %></p>
-  </div>
-</div>
+<% if signed_in? %>
+  <section id='homepage-hero-signed-in' class='block-splash'>
+    <div class='centered'>
+      <div class='profile-layer'>
+        <div class='row'>
+          <div class='small-5 small-centered columns'>
+            <%= image_tag current_user.avatar_url, size: '70'%>
+            <h3><%= current_user.full_name %></h3>
+          </div>
+          <div class='small-5 small-centered columns'>
+            <h6><%= current_user.email %></h6>
+          </div>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='small-centered columns button-path'>
+          <%= link_to "I need assistance", new_alert_path, class: 'button small expant radius hero-button alert' %>
+        </div>
+        <div class='small-centered columns'>
+          <%= link_to "I can lend a hand", alerts_path, class: 'button small expant radius hero-button success' %>
+        </div>
+      </div>
+    </div>
+  </section>
+<% else %>
+  <section id="homepage-hero" class="block">
+    <div class='centered'>
+      <%= image_tag "bike_logo_white.png", class: 'logo' %>
+      <div class="row">
+        <div class="small-10 small-centered columns">
+          <%= link_to "Log In", login_path, class: "button small expand radius hero-button" %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="small-10 small-centered columns">
+          <%= link_to "Sign Up", signup_path, class: "button small expand radius hero-button" %>
+        </div>
+      </div>
+    </div>
+  </section>
+<% end %>
+<%= render partial: "shared/footer" %>
